Fixed elements that were causing white space to appear on extra small screens. Added flexwrap, media queries,  and different font sizes.

--- a/src/Components/About/about.scss
+++ b/src/Components/About/about.scss
@@ -23,11 +23,10 @@
     }
 
     #about_description {
-      padding: 20px 10px 20px 20px;
+      padding: 10px 0px 0px 20px;
       margin: auto;
       margin-left: 0px;
       display: inline;
-      min-width: 300px;
     }
   }
 }
@@ -67,12 +66,12 @@
     width: 300px !important;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 330px) {
   #about_div {
     padding-right: 0px;
     padding-left: 0px;
   }
   #picture {
-    width: 280px !important;
+    display: none !important;
   }
 }
