--- a/src/Components/Jumbotron/jumbotron.scss
+++ b/src/Components/Jumbotron/jumbotron.scss
@@ -32,6 +32,7 @@
       display: flex;
       justify-content: center;
       flex-direction: row;
+      flex-wrap: wrap;
       span {
         padding: 30px 20px 10px 20px;
 
